[package]
name = "meme-vault-core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
meme-vault-fetcher = { path = "../meme-vault-fetcher"}
serde = { workspace = true }
serde_json = "1.0.114"
simple_crypt = "0.2.3"
steganography = "1.0.2"
